# Object-manipulation-and-task-planning-

./: .gitignore  README.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/gazebo_tests/: ModelSpawnConfig.h
catkin_ws/devel/lib/pkgconfig/: aau_lab_ros_models.pc  franka_description.pc  gazebo_tests.pc  omtp_lecture1.pc  urdf_tutorial.pc
catkin_ws/devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
catkin_ws/devel/share/gazebo_tests/cmake/: gazebo_testsConfig.cmake
catkin_ws/devel/share/gazebo_tests/docs/: ModelSpawnConfig.dox  ModelSpawnConfig.wikidoc
catkin_ws/devel/share/omtp_lecture1/cmake/: omtp_lecture1Config.cmake
catkin_ws/devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
omtp_course/omtp_lecture1/urdf/: omtp.urdf
omtp_course/omtp_lecture2/scripts/: Pick_and_place.py  lec2_spawn_box.py  move_robot.py  spawn_box.py
omtp_course/omtp_lecture3/omtp_lecture3/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture3/omtp_lecture3/launch/: franka_pick_and_place.launch  omtp_lecture3.launch
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/include/logical_camera/plugins/: ROSLogicalCameraPlugin.hh
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/launch/: logical_camera_demo.launch
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/models/logical_camera/meshes/: camera.dae
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/rviz/: logical_camera_demo.rviz
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/src/plugins/: ROSLogicalCameraPlugin.cc
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/urdf/: demo_world.xacro  logical_camera.xacro
omtp_course/omtp_lecture3/omtp_lecture3/logical_camera/worlds/: box_world.world
omtp_course/omtp_lecture3/omtp_lecture3/scripts/: frames.gv  tf_object_pose.py  transform_detected_objects.py
omtp_course/omtp_lecture3/omtp_lecture3/urdf/: omtp_panda.urdf.xacro
omtp_course/omtp_lecture3/omtp_lecture3/worlds/: box_world.world
omtp_course/omtp_lecture3/panda_moveit_config/: .setup_assistant  package.xml
omtp_course/omtp_lecture3/panda_moveit_config/config/: fake_controllers.yaml  gazebo_omtp.urdf  ompl_planning.yaml  omtp.srdf  ros_controllers.yaml
omtp_course/omtp_lecture3/panda_moveit_config/launch/: gazebo.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
omtp_course/omtp_lecture4/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture4/omtp_factory_behaviors/omtp_factory_flexbe_states/src/omtp_factory_flexbe_states/: MoveToJointDynState.py  ToolControlState.py  compute_grasp_state.py  detect_part_camera_state.py
omtp_course/omtp_lecture4/scripts/: tool_control_server.py
omtp_course/omtp_lecture4/srv/: ToolControl.srv
omtp_course/omtp_lecture5+6/computer_vision_850_pkg/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture5+6/omtp_lecture5/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture5+6/omtp_lecture5/config/: find_obj_settings  find_obj_settings.ini
omtp_course/omtp_lecture5+6/omtp_lecture5/launch/: 1_visualizer.launch  2_image_processing.launch  3_object_detection.launch  4_object_pose_estimation.launch  5_vision_based_grasping.launch  omtp_lecture5_base.launch
omtp_course/omtp_lecture5+6/omtp_lecture5/rviz/: rviz.rviz
omtp_course/omtp_lecture5+6/omtp_lecture5/scripts/: 2d_object_detection.py  3d_pose_estimation.py
omtp_course/omtp_lecture5+6/omtp_lecture5/urdf/camera/: _d435.urdf.xacro
omtp_course/omtp_lecture5+6/omtp_lecture5/urdf/objects/: cube.urdf.xacro
omtp_course/omtp_lecture5+6/omtp_lecture6/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture5+6/omtp_lecture6/launch/: 1_object_detection.launch  2_object_pose_estimation.launch  3_vision_based_grasping.launch
omtp_course/omtp_lecture5+6/omtp_lecture6/src/: 2_object_pose_estimation.py  2_object_pose_estimation_original.py  3_vision_based_grasping.py  3_vision_based_grasping_original.py
omtp_course/omtp_lecture5+6/planar_pose/src/: config.py  object_detection.py  planar_pose_estimation.py
omtp_course/omtp_lecture5+6/yolov5_pytorch_ros/src/: detect.py
omtp_course/omtp_lecture5/omtp_lecture5/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture5/omtp_lecture5/launch/: 1_visualizer.launch
omtp_course/omtp_lecture5/omtp_lecture5/urdf/: omtp_factory.urdf.xacro
omtp_course/omtp_lecture5/omtp_lecture5/urdf/camera/: _d435.urdf.xacro  rgbd.gazebo.xacro
omtp_course/omtp_lecture5/omtp_lecture5_moveit_config/: CMakeLists.txt  package.xml
omtp_course/omtp_lecture7+8/omtp_2024_examples_and_exercises-main/: README.md
omtp_course/omtp_lecture7+8/omtp_2024_examples_and_exercises-main/Exercise/: Exercise1_dmp.py  Exercise3_demo_DMP_franka.py  Exercise4_demo_DMP_franka.py  Jspace_Cspace_DMP_Exercise2.py
omtp_course/omtp_lecture7+8/omtp_2024_examples_and_exercises-main/UR5_Example/: Grasp_sim.py  Grasp_sim_dmp.py  Mujoco_example_UR5e_Poly.py  Mujoco_example_UR5e_trj_gen_example.py
omtp_factory_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omtp_factory_moveit_config/config/: fake_controllers.yaml  gazebo_omtp_factory.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  omtp_factory.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
omtp_factory_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
workspace/devel/: .catkin  .rosinstall  _setup_util.py
workspace/devel/lib/pkgconfig/: aau_lab_ros_models.pc  external_ros_models.pc  franka_description.pc  gazebo_tests.pc  omtp_lecture1.pc  urdf_tutorial.pc
(+13 files in other folders)
