<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture4</name>
  <version>0.0.0</version>
  <description>The omtp_lecture4 package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>TODO</license>  <!-- Consider specifying a valid license here -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- rospy dependencies -->
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- roscpp dependencies -->
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- std_msgs dependencies for message generation -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Message generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

