<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture3</name>
  <version>0.0.0</version>
  <description>The omtp_lecture3 package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>TODO</license>  <!-- Consider specifying a valid license here -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for building -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> <!-- Include this if you are using custom messages -->
  <build_depend>geometry_msgs</build_depend>


  <!-- Dependencies for execution -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- Include this if you are using custom messages -->
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

