<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture5</name>
  <version>0.0.0</version>
  <description>The omtp_lecture5 package</description>

  <maintainer email="rmhpdf@mp.aau.dk">Rui Pimentel de Figueiredo</maintainer>
  <license>BSD</license> <!-- Update with the appropriate license -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>image_view</exec_depend>

  <depend>octomap</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>realsense2_description</depend>
  <depend>vision_msgs</depend>
</package>

